--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -36,10 +36,16 @@
     dest: /usr/share/nginx/html
     remote_src: yes
 
+
 - name: Creating nginx conf file
   ansible.builtin.template:
     src: nginx.conf.j2
     dest: /etc/nginx/nginx.conf
   notify: 
    - Restart Nginx   
+
+- name: Restart Nginx
+  ansible.builtin.service:
+    name: nginx
+    state: restarted
 
