--- a/main.yml
+++ b/main.yml
@@ -1,5 +1,7 @@
 - name: Configuring {{ module }}
-  hosts: "{{ module }}"
+  #hosts: "{{ module }}"
+  hosts: localhost
+  connection: local
   become: true
   roles:
   - "{{ module }}"
